# palver

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  README.org  todo.org
resources/app/: .gitignore  CMakeLists.txt  actions.palver
resources/app/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  palv.cpp  palv.h
src/palverlib/: CMakeLists.txt  palv.cpp  palv.h
src/tests/: CMakeLists.txt  test_palv.cpp
src/tests/testConf/.palver/app/: actions.palver
